# ml-model-examples

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: 01_Home.py  01_🏠_Home.py
src/pages/: 02_Linear_Models.py  02_Page_2.py  02_📚_Types_of_Learning.py  03_Tree-Based_Models.py  03_💯_Model_Evaluation_Metrics.py  03_📈_Linear_Models.py  04_Clustering.py  04_🌴_Tree-Based_Models.py  05_Association.py  05_📏_Clustering.py  06_⛏_Association.py  06_👥_Clustering.py  07_⛏_Association.py
src/pages/headers/: supervised.py  unsupervised.py
src/pages/tabs/: apriori.py  decision_tree.py  gaussian_mixture.py  gradient_boosting.py  hierarchical.py  kmeans.py  lasso_regression.py  lightgbm.py  linear_regression.py  logistic_regression.py  random_forest.py  ridge_regression.py  tab.py  xgboost.py
src/pages/tabs/utils/: markdown_formatter.py
src/utils/: logger.py
